--- a/src/components/weather.css
+++ b/src/components/weather.css
@@ -24,15 +24,36 @@
     border-radius:15px;
 object-fit: cover;
 }
-.city-cards {
-    display:flex;
-    align-items: center;
+
+
+
+.input-field {
+  
+  font-size: 30px ;
+  font-weight: bold;
+  flex: 1;
+  padding: 0% 3%;
+  max-width: 150px;
+  
+  
 }
-.cites{
-    display:flex;
-    gap:1em;
-   
+
+.input-field:focus {
+  border-color: #007bff; /* Example focus border color */
+  outline: none; /* Remove default outline */
 }
+.head {
+  
+  margin-left: 0%;
+}
+.h{
+ margin-left: -10%;
+}
+
+.wea, p {
+  margin-left: 5px; /* Remove default margins */
+}
+
 .hourly{
     display:flex;
     flex-direction: column;
@@ -70,11 +91,12 @@ gap:.5em;
    
 }
 input[type='text']{
-    width:300px;
-    padding:0.1em 0 0 1em;
+   
+
     font-family: 'hammersmith one';
     border: none;
     outline: none;
+
 }
 .icon{
     width:30px;
@@ -83,9 +105,15 @@ input[type='text']{
     padding:0.1em;
     border:2px solid black;
 }.wea{
-    color:blue;
+    color: gray;
     font-family:"poppins";
-     font-size:1.3rem;
+     font-size: 25px;
+    display: inline;
+     
+}
+.head{
+  display: flex;
+  flex-direction: row;
 }
 .wea span{
     font-weight: bold;
@@ -121,7 +149,7 @@ font-size:0.8rem;
   }
   
   .weather-right .today .wlogo {
-    font-size: 7rem;
+    font-size: 10rem;
   }
   
   .weather-right h1 {
@@ -138,7 +166,9 @@ font-size:0.8rem;
     font-size: 3rem;
     font-family: 'poppins';
     margin-top: 0px;
+    margin: 8%;
   }
+  
   
   .weather-right .placeNAME {
     font-family: 'hammersmith one';
@@ -212,6 +242,7 @@ font-size:0.8rem;
   
   .input-container {
     border: none;
+   
   }
   @keyframes blink {
     0% {
@@ -230,4 +261,5 @@ font-size:0.8rem;
   }
  .h11{
   padding: 3%;
- }   
+ } 
+ 
